# powermgr_display_manager

./: CLAUDE.md  README.md  README_zh.md  bundle.json  displaymanager.yaml  displaymgr.gni  ohos.build  powermanager.yaml
brightness_manager/: BUILD.gn
brightness_manager/include/: brightness_action.h  brightness_base.h  brightness_config_parser.h  brightness_dimming.h  brightness_dimming_callback.h  brightness_ffrt.h  brightness_manager.h  brightness_manager_ext.h  brightness_param_helper.h  brightness_service.h  brightness_setting_helper.h  calculation_config_parser.h  calculation_curve.h  calculation_manager.h  config_parser.h  config_parser_base.h  ilight_lux_manager.h  light_lux_buffer.h  light_lux_manager.h  lux_filter_config_parser.h  lux_threshold_config_parser.h
brightness_manager/src/: brightness_action.cpp  brightness_config_parser.cpp  brightness_dimming.cpp  brightness_manager.cpp  brightness_manager_ext.cpp  brightness_param_helper.cpp  brightness_service.cpp  brightness_setting_helper.cpp  calculation_config_parser.cpp  calculation_curve.cpp  calculation_manager.cpp  config_parser.cpp  config_parser_base.cpp  light_lux_buffer.cpp  light_lux_manager.cpp  lux_filter_config_parser.cpp  lux_threshold_config_parser.cpp
brightness_manager/test/: BUILD.gn
brightness_manager/test/unittest/: BUILD.gn
brightness_manager/test/unittest/include/: mock_brightness_manager_interface.h
brightness_manager/test/unittest/src/: brightness_config_parse_test.cpp  brightness_light_lux_buffer_test.cpp  brightness_manager_ext_test.cpp  brightness_manager_test.cpp  brightness_service_advanced_test.cpp  brightness_service_test.cpp  mock_brightness_manager_interface.cpp
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/native/include/: display_info.h  display_manager.h  display_power_callback_stub.h  display_power_mgr_client.h  idisplay_mgr.h  idisplay_power_callback.h  idisplay_power_mgr.h
interfaces/innerkits/native/src/: display_manager.cpp  display_mgr_client.cpp  display_mgr_client.h
service/: BUILD.gn
service/etc/: BUILD.gn  display.para  display.para.dac
service/native/include/: display_auto_brightness.h  display_event_handler.h  display_mgr_service.h  display_param_helper.h  display_power_mgr_service.h  display_setting_helper.h  display_system_ability.h  gradual_animator.h  screen_action.h  screen_controller.h
service/native/src/: display_auto_brightness.cpp  display_event_handler.cpp  display_mgr_service.cpp  display_param_helper.cpp  display_power_mgr_service.cpp  display_setting_helper.cpp  display_system_ability.cpp  gradual_animator.cpp  screen_action.cpp  screen_controller.cpp
service/zidl/include/: display_mgr_proxy.h  display_mgr_stub.h  display_power_callback_proxy.h  display_power_mgr_proxy.h  display_power_mgr_stub.h
service/zidl/src/: display_mgr_proxy.cpp  display_mgr_stub.cpp  display_power_callback_proxy.cpp  display_power_callback_stub.cpp  display_power_mgr_proxy.cpp  display_power_mgr_stub.cpp
state_manager/frameworks/napi/: BUILD.gn  brightness.cpp  brightness.h  brightness_module.cpp
state_manager/service/: BUILD.gn  DisplayPowerMgrIdlTypes.idl  IDisplayPowerMgr.idl
state_manager/service/etc/: BUILD.gn  display.para  display.para.dac
state_manager/service/native/include/: display_auto_brightness.h  display_common_event_mgr.h  display_param_helper.h  display_power_mgr_service.h  display_system_ability.h  gradual_animator.h  miscellaneous_display_power_strategy.h  screen_action.h  screen_controller.h  screen_power_adapter.h  screen_power_off_strategy.h
state_manager/service/native/src/: display_auto_brightness.cpp  display_common_event_mgr.cpp  display_param_helper.cpp  display_power_mgr_service.cpp  display_setting_helper.cpp  display_system_ability.cpp  gradual_animator.cpp  miscellaneous_display_power_strategy.cpp  screen_action.cpp  screen_controller.cpp  screen_power_adapter.cpp  screen_power_off_strategy.cpp
state_manager/service/zidl/include/: display_brightness_callback_proxy.h  display_brightness_listener_proxy.h  display_power_callback_proxy.h  display_power_mgr_proxy.h  display_power_mgr_stub.h  screen_display_state_callback_proxy.h
state_manager/service/zidl/src/: display_brightness_callback_proxy.cpp  display_brightness_callback_stub.cpp  display_brightness_listener_proxy.cpp  display_brightness_listener_stub.cpp  display_power_callback_proxy.cpp  display_power_callback_stub.cpp  display_power_mgr_proxy.cpp  display_power_mgr_stub.cpp  screen_display_state_callback_proxy.cpp  screen_display_state_callback_stub.cpp
state_manager/test/fuzztest/: BUILD.gn
state_manager/test/fuzztest/adjustbrightness_fuzzer/: BUILD.gn  adjustbrightness_fuzzer_test.cpp
state_manager/test/fuzztest/autoadjustbrightness_fuzzer/: BUILD.gn  autoadjustbrightness_fuzzer_test.cpp
state_manager/test/fuzztest/boostbrightness_fuzzer/: BUILD.gn  boostbrightness_fuzzer_test.cpp
state_manager/test/fuzztest/discountbrightness_fuzzer/: BUILD.gn  discountbrightness_fuzzer_test.cpp
state_manager/test/fuzztest/display_utils/: display_fuzzer.cpp  display_fuzzer.h
state_manager/test/fuzztest/displaycoverage_fuzzer/: BUILD.gn  displaycoverage_fuzzer_test.cpp  displaycoverage_fuzzer_test.h
state_manager/test/fuzztest/displaystate_fuzzer/: BUILD.gn  displaystate_fuzzer_test.cpp
state_manager/test/fuzztest/getbrightness_fuzzer/: BUILD.gn  getbrightness_fuzzer_test.cpp
state_manager/test/fuzztest/getdisplayid_fuzzer/: BUILD.gn  getdisplayid_fuzzer_test.cpp
state_manager/test/fuzztest/getfeaturesupport_fuzzer/: BUILD.gn  getfeaturesupport_fuzzer_test.cpp
state_manager/test/systemtest/: BUILD.gn
state_manager/test/unittest/: BUILD.gn
test/fuzztest/display_fuzzer/: BUILD.gn  display_fuzzer.cpp  display_fuzzer.h
tools/ohos-displayManager/: BUILD.gn  config.json  ohos-displayManager.json
tools/ohos-displayManager/docs/: README.md
tools/ohos-displayManager/src/: BUILD.gn  cli_command.cpp  cli_command.h  main.cpp
tools/ohos-displayManager/tests/: BUILD.gn  mock_display_power_mgr_client.h  ohos_display_manager_test.cpp
(+178 files in other folders)
