# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/display_manager/displaymgr.gni")

config("displaymgr_private_config") {
  include_dirs = [
    "//utils/system/safwk/native/include",
    "//base/hiviewdfx/hicollie/interfaces/native/innerkits/include/xcollie",
    "//base/powermgr/power_manager/interfaces/innerkits/native/include",
    "//base/sensors/sensor/interfaces/native/include",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
  ]
}

config("displaymgr_public_config") {
  include_dirs = [
    "native/include",
    "zidl/include",
  ]
}

ohos_shared_library("displaymgrservice") {
  sources = [
    "native/src/display_param_helper.cpp",
    "native/src/display_power_mgr_service.cpp",
    "native/src/display_system_ability.cpp",
    "native/src/gradual_animator.cpp",
    "native/src/screen_action.cpp",
    "native/src/screen_controller.cpp",
    "zidl/src/display_power_callback_proxy.cpp",
    "zidl/src/display_power_mgr_stub.cpp",
  ]

  configs = [
    "${displaymgr_utils_path}:utils_config",
    ":displaymgr_private_config",
  ]

  public_configs = [ ":displaymgr_public_config" ]

  deps = [
    "${displaymgr_native_innerkits_path}:displaymgr",
    "//drivers/peripheral/display/hal:hdi_display_device",
    "//foundation/graphic/standard:libsurface",
    "//foundation/graphic/standard:libwmservice",
    "//foundation/graphic/standard/rosen/modules/render_service_client:librender_service_client",
    "//foundation/windowmanager/utils:libwmutil",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "eventhandler:libeventhandler",
    "hicollie_native:libhicollie",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "sensor:sensor_interface_native",
    "startup_l2:syspara",
    "window_manager:libdm",
  ]

  part_name = "${displaymgr_native_part_name}"
}
