# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/display_manager/displaymgr.gni")

config("displaymgr_private_config") {
  include_dirs = [
    "${displaymgr_service_zidl}/include",
    "//base/hiviewdfx/hicollie/interfaces/native/innerkits/include/xcollie",
  ]
}

config("displaymgr_public_config") {
  include_dirs = [ "native/include" ]
}

ohos_shared_library("displaymgr") {
  sources = [
    "${displaymgr_framework_path}/native/display_power_mgr_client.cpp",
    "${displaymgr_service_zidl}/src/display_power_callback_stub.cpp",
    "${displaymgr_service_zidl}/src/display_power_mgr_proxy.cpp",
  ]

  configs = [
    "${displaymgr_utils_path}:utils_config",
    ":displaymgr_private_config",
  ]

  public_configs = [ ":displaymgr_public_config" ]

  external_deps = [
    "c_utils:utils",
    "hicollie_native:libhicollie",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "power_manager:powermgr_client",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${displaymgr_part_name}"
}
