# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../displaymgr.gni")

module_output_path = "${brightnessmgr_root_path}/test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${brightnessmgr_root_path}/include",
    "${displaymgr_inner_api}/include/native/include",
    "${displaymgr_utils_path}/native/include",
  ]
}

ohos_unittest("brightness_manager_test") {
  module_out_path = module_output_path

  configs = [
    "${brightnessmgr_root_path}:brightness_manager_config",
    "${displaymgr_utils_path}:coverage_flags",
    "${displaymgr_utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${brightnessmgr_root_path}:brightness_manager",
    "${displaymgr_inner_api}:displaymgr",
    "//third_party/googletest:gtest_main",
  ]

  sources = [ "./src/brightness_manager_test.cpp" ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_consumer",
    "ffrt:libffrt",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "ipc:ipc_core",
    "power_manager:power_ffrt",
    "power_manager:power_setting",
    "power_manager:power_sysparam",
    "power_manager:powermgr_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libdm",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":brightness_manager_test" ]
}
