# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../displaymgr.gni")

ohos_shared_library("brightness") {
  sources = [
    "${displaymgr_framework_path}/napi/brightness.cpp",
    "${displaymgr_framework_path}/napi/brightness_module.cpp",
  ]

  configs = [
    "${displaymgr_utils_path}:utils_config",
    "${displaymgr_utils_path}:coverage_flags",
  ]

  deps = [
    "${displaymgr_inner_api}:displaymgr",
    "${brightnessmgr_root_path}:brightness_manager",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hiview:libxpower_event_js",
    "napi:ace_napi",
    "power_manager:powermgr_client",
  ]

  relative_install_dir = "module"

  subsystem_name = "powermgr"
  part_name = "${displaymgr_part_name}"
}
