# Copyright (c) 2023-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("../../../displaymgr.gni")

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "adjustbrightness_fuzzer:AdjustBrightnessFuzzTest",
    "autoadjustbrightness_fuzzer:AutoAdjustBrightnessFuzzTest",
    "boostbrightness_fuzzer:BoostBrightnessFuzzTest",
    "discountbrightness_fuzzer:DiscountBrightnessFuzzTest",
    "displaycoverage_fuzzer:DisplayCoverageFuzzTest",
    "displaystate_fuzzer:DisplayStateFuzzTest",
    "getbrightness_fuzzer:GetBrightnessFuzzTest",
    "getdisplayid_fuzzer:GetDisplayIdFuzzTest",
    "notifyscreenpowerstatus_fuzzer:NotifyScreenPowerStatusFuzzTest",
    "overridebrightness_fuzzer:OverrideBrightnessFuzzTest",
    "overridedisplayoffdelay_fuzzer:OverrideDisplayOffDelayFuzzTest",
    "registercallback_fuzzer:RegisterCallbackFuzzTest",
    "setbrightness_fuzzer:SetBrightnessFuzzTest",
    "setcoordinated_fuzzer:SetCoordinatedFuzzTest",
    "setlightbrightnessthreshold_fuzzer:SetLightBrightnessThresholdFuzzTest",
    "setmaxbrightness_fuzzer:SetMaxBrightnessFuzzTest",
    "setscreendisplaystate_fuzzer:SetScreenDisplayStateFuzzTest",
    "setscreenonbrightness_fuzzer:SetScreenOnBrightnessFuzzTest",
    "runjsoncommand_fuzzer:RunJsonCommandFuzzTest",
    "registerdatachangelistener_fuzzer:RegisterDataChangeListenerFuzzTest",
  ]
  if (display_manager_feature_poweroff_strategy) {
    deps += [
      "setscreenpoweroffstrategy_fuzzer:SetScreenPowerOffStrategyFuzzTest",
    ]
  }
}
